tests-integration/tests/roundtrip/invalid/semantic/typecheck/matrix_in_bool_expr/matrix_in_bool_expr.essence
find m: matrix indexed by [int(1..3)] of bool
such that m /\ true